--- a/news/2025/01/28/012.mdx
+++ b/news/2025/01/28/012.mdx
@@ -1,9 +1,18 @@
 ---
-slug: "huge-congratulations-to-our-outstanding-alumnus-renz-espongja"
-title: "huge congratulations to our outstanding alumnus, renz espongja!"
-description: "Renz’s outstanding work ethic, steadfast commitment, and the outstanding hospitality education he obtained at goldenstate..."
+slug: "renz-espongja-makes-his-mark-in-abu-dhabi"
+title: "Renz Espongja Makes His Mark in Abu Dhabi"
+description: "Goldenstate College congratulates Renz Espongja on his promotion at Ramada Hotel in Abu Dhabi..."
 author: "Goldenstate"
 date: "2025/01/28"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/471683733_1012791564226001_1884890709433309566_n.jpg"
 ---
 
-Renz’s outstanding work ethic, steadfast commitment, and the outstanding hospitality education he obtained at goldenstate college of koronadal city have all contributed to his recent promotion to f&b coordinator at the prestigious ramada hotel abu dhabi. it brings us great joy to see our alumni succeeding on the global scene! renz’s achievements demonstrate how his personal motivation and the excellent instruction offered by our hospitality management program work in harmony. we develop future leaders with the abilities, know-how, and self-assurance required to succeed in the fast-paced hospitality industry. renz, keep shining bright! all of our students find inspiration in you.
+Goldenstate College of Koronadal proudly congratulates Renz Espongja, an outstanding alumnus of the Hospitality Management program, on his recent promotion as Food and Beverage Coordinator at the prestigious Ramada Hotel in Abu Dhabi.
+
+Renz’s promotion reflects his strong work ethic, professional commitment, and the solid foundation he received from Goldenstate College’s hospitality education. His achievement highlights the global readiness of the college’s graduates and the effectiveness of its hands-on training and industry-focused curriculum.
+
+Goldenstate continues to shape future leaders equipped with the skills, knowledge, and confidence needed to excel in the dynamic world of hospitality. Renz’s success stands as a source of inspiration for current and future students.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/471493047_1012791557559335_6315067102925536517_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/471683733_1012791564226001_1884890709433309566_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/471916656_1012791560892668_7660406104305493039_n.jpg)
