--- a/news/2025/01/28/009.mdx
+++ b/news/2025/01/28/009.mdx
@@ -1,33 +1,26 @@
 ---
-slug: "goldenstate-college-shines-at-the-6th-multidisciplinary-conference-for-awards-and-research"
-title: "goldenstate college shines at the 6th multidisciplinary conference for awards and research"
-description: "Goldenstate college has once again proven its commitment to excellence in education and research, emerging..."
+slug: "goldenstate-college-shines-at-6th-multidisciplinary-conference-in-vietnam"
+title: "Goldenstate College Shines at 6th Multidisciplinary Conference in Vietnam"
+description: "Goldenstate College earned multiple honors at the 6th Multidisciplinary Conference in Ho Chi Minh City..."
 author: "Goldenstate"
 date: "2025/01/28"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469335800_995893305915827_2301461028838039082_n.jpg"
 ---
 
-Goldenstate college has once again proven its commitment to excellence in education and research, emerging victorious at the prestigious 6th multidisciplinary conference for awards and research held in ho chi minh city, vietnam.
+Goldenstate College made a notable mark at the 6th Multidisciplinary Conference for Awards and Research in Ho Chi Minh City, Vietnam, bringing home multiple honors that reinforce its commitment to excellence in education and research.
 
-The goldenstate college delegation’s remarkable achievements underscore the institution’s dedication to innovation, leadership, and quality education.
+At the prestigious event, Dr. Warren A. Manilay, president and CEO of Goldenstate College, received the Outstanding Award for Leadership Educator in recognition of his visionary guidance and dedication to fostering a high-caliber academic environment.
 
-The following accolades were proudly brought home:.
+The college’s scholarly strength was further highlighted by Dr. Josie Yap‑Tirador, vice president for academic affairs, who earned the title of Outstanding Distinguished Educator and placed third in the poster research category for her study, “Read with Me Program: An Inexpensive and Effective Approach in Teaching Children to Read.”
 
--outstanding award for leadership educator.
+Also honored was Dr. Ferdinand G. Alcantara, school administrator of Goldenstate College–Koronadal City, who shared the Outstanding Distinguished Educator award and claimed third place as best presenter for his compelling presentation.
 
-Dr. warren a. manilay, president and ceo of goldenstate college, was honored for his visionary leadership and unwavering dedication to fostering a culture of academic excellence.
+These accolades, won amid international competition, underscore Goldenstate College’s dedication to innovation and leadership in global education. The successful showing affirms its mission to support impactful research and nurture academic excellence.
 
--outstanding distinguished educator and 3rd place poster research.
+Goldenstate College continues to elevate educators and students, building a reputation as a beacon of quality learning and positive community impact.
 
-Dr. josie yap-tirador, vp for academic affairs, received recognition for her impactful research titled “read with me program: an inexpensive and effective approach in teaching children to read”.
-
--outstanding distinguished educator and 3rd place poster research.
-
-Dr. ferdinand g. alcantara, school administrator of goldenstate college of koronadal city, received recognition as an outstanding distinguished educator and also secured 3rd place in the best presenter category.
-
-The achievements at the 6th multidisciplinary conference reaffirm goldenstate college’s standing as a leader in global education. these awards highlight the institution’s commitment to fostering innovation, leadership, and impactful research that addresses real-world challenges.
-
-Goldenstate college continues to inspire and empower educators, students, and communities, setting a standard for excellence in the academic world.
-
-Congratulations to all the awardees and the entire goldenstate college are proud for this outstanding success!.
-
-#goldenstatecollege.
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469335800_995893305915827_2301461028838039082_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469058510_995926539245837_8455880827775156904_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469487021_995926275912530_8209257021665448131_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469495485_995926655912492_1502873237902055919_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469634592_995940659244425_3542918785303814917_n.jpg)
