--- a/news/2025/01/28/007.mdx
+++ b/news/2025/01/28/007.mdx
@@ -1,19 +1,26 @@
 ---
 slug: "goldenstate-college-delegates-shine-at-international-research-conference-in-vietnam"
-title: "goldenstate college delegates shine at international research conference in vietnam"
-description: "Goldenstate college made its mark on the global academic stage during the international multidisciplinary research..."
+title: "Goldenstate College Delegates Shine at International Research Conference in Vietnam"
+description: "Goldenstate College impressed at the 6th International Research Conference held in Ho Chi Minh City..."
 author: "Goldenstate"
 date: "2025/01/28"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469407269_995942305910927_2503785929607716275_n.jpg"
 ---
 
-Goldenstate college made its mark on the global academic stage during the international multidisciplinary research conference, held on december 5–6, 2024, in ho chi minh city, vietnam. this prestigious event brought together experts from diverse fields—scholars, researchers, and educators—to share groundbreaking ideas, innovations, and research findings.
+Goldenstate College made a strong impression at the 6th International Multidisciplinary Research Conference held on December 5–6, 2024, in Ho Chi Minh City, Vietnam, establishing itself as a rising force in global academic collaboration.
 
-Representing goldenstate college were three esteemed members of its academic leadership:.
+The college delegation included three distinguished leaders: Dr. Gregorio Warren A. Manilay, MNSA, Ed.D, Ph.D.; Dr. Josie Yap‑Tirador, D.B.A, Ph.D.; and Dr. Ferdinand G. Alcantara, Ed.D. 
 
-Dr. gregorio warren a. manilay, mnsa, ed.d., ph.d.,.
+Their active participation and presentations highlighted Goldenstate’s commitment to educational excellence and meaningful knowledge exchange on the international stage.
 
-Dr. josie yap-tirador, dba, ph.d., and.
+The conference, hosted by Beyond Books Publication in partnership with ISTAR‑Thailand, gathered scholars, researchers, and educators from diverse fields to present groundbreaking ideas and research findings.
 
-Dr. ferdinand g. alcantara, ed.d.
+By sharing their expertise and engaging with global peers, the delegates elevated Goldenstate College’s reputation as a leader in innovative education and academic research. Their contributions underscored the institution’s dedication to generating solutions that address real-world challenges.
 
-By sharing their expertise and engaging with the global academic community, dr. manilay, dr. alcantara, and dr. yap-tirador have further elevated the institution’s reputation as a leader in education and innovation. their participation not only showcased their individual expertise but also highlighted goldenstate college’s commitment to academic excellence and meaningful contributions to the global exchange of ideas. goldenstate college’s participation in the 6th international multidisciplinary research conference reaffirms its commitment to excellence in education and research.
+Goldenstate College’s successful participation at this international conference reaffirms its mission to foster academic leadership and global collaboration for educators, students, and communities alike.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469407269_995942305910927_2503785929607716275_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469065360_995941242577700_8425896768344299994_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469124503_995932529245238_2079797475949591995_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469254484_995932559245235_1995599968592934077_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469480877_995941232577701_9140484281616712932_n.jpg)
