--- a/news/2025/01/28/006.mdx
+++ b/news/2025/01/28/006.mdx
@@ -1,11 +1,25 @@
 ---
-slug: "golden-state-college-empowers-its-it-students-with-crucial-social-media-skills"
-title: "golden state college empowers its it students with crucial social media skills!"
-description: "Golden state college empowers its it students with crucial social media skills! sir elmer m...."
+slug: "goldenstate-college-equips-it-students-with-social-media-etiquette-seminar"
+title: "Goldenstate College Equips IT Students with Social Media Etiquette Seminar"
+description: "Goldenstate College held a seminar on basic social media etiquette for IT students on January 28..."
 author: "Goldenstate"
 date: "2025/01/28"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/472735697_122155568750308304_6916211442342676194_n.jpg"
 ---
 
-Golden state college empowers its it students with crucial social media skills! sir elmer m. baloyo jr., mmit, the program head of the college of information technology education of goldenstate college – general santos city, led a insightful seminar on “the basic social media etiquette” for our it students. a valuable lesson in building positive online identities and navigating the digital landscape responsibly.
+Goldenstate College of General Santos City's College of Information Technology Education held a seminar titled “The Basic Social Media Etiquette” on January 28, 2025, aimed at preparing IT students for the digital world. The event, held at the Lagao Campus, was led by Sir Elmer M. Baloyo Jr., MMIT, Program Head, and attended by students eager to enhance their online conduct.
 
-#socialmediaetiquette#iteducation#goldenstatecollege.
+The seminar focused on essential guidelines including maintaining respectful tone, avoiding oversharing, crediting sources properly, and portraying a professional online persona — aspects considered crucial to a safe and positive digital presence.
+
+Sir Baloyo emphasized practical strategies for students to manage their digital footprints and protect their professional reputations. The seminar underscored how social media habits today can impact career opportunities and personal credibility in their future fields.
+
+By integrating netiquette principles into its IT curriculum, Goldenstate College is preparing students to be responsible digital citizens and to represent themselves professionally in increasingly connected and public online spaces.
+
+In the words of Goldenstate's IT Department: In an era when one wrong post can close a door, Goldenstate College is ensuring its students cross every digital frontier with integrity and care.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/472716810_122155567346308304_8487924528197812144_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/472718249_122155567382308304_6924311193031899976_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/472735697_122155568750308304_6916211442342676194_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/472754522_122155568714308304_9077423431963987681_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/472909012_122155568720308304_5119510722838673664_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/472949649_122155568582308304_1998395583101600730_n.jpg)
