--- a/news/2025/01/28/005.mdx
+++ b/news/2025/01/28/005.mdx
@@ -1,13 +1,23 @@
 ---
-slug: "development-of-city-of-koronadalcreative-industry-development-plan-ck-cidp-workshop"
-title: "development of city of koronadal—creative industry development plan (ck-cidp) workshop"
-description: "Photos taken during the participation of the selected students of goldenstate college of koronadal, together..."
+slug: "goldenstate-college-students-participate-in-koronadal-creative-industry-workshop"
+title: "Goldenstate College Students Participate in Koronadal Creative Industry Workshop"
+description: "Goldenstate Koronadal students joined the CK‑CIDP Workshop held at Paraiso Verde Resort on December 4–6..."
 author: "Goldenstate"
 date: "2025/01/28"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/468949798_897469115828307_504456807025108032_n.jpg"
 ---
 
-Photos taken during the participation of the selected students of goldenstate college of koronadal, together with sir aj bryant jalando-on and sir reyn heart floro, in the “development of city of koronadal—creative industry development plan (ck-cidp) workshop” held this december 4-6, 2024, at paraiso verde resort and waterpark.
+Students from Goldenstate College of Koronadal, alongside faculty Sir AJ Bryant Jalando‑on and Sir Reyn Heart Floro, took part in the “Development of City of Koronadal – Creative Industry Development Plan (CK‑CIDP) Workshop.” The event took place at Paraiso Verde Resort and Waterpark from December 4 to 6 as part of the city’s Koronadaleño Lunsod Lunsad 2024 initiative.
 
-This workshop was one of the key activities of the “koronadaleno lunsod lunsad 2024,” which was implemented by the city government of koronadal through the city tourism and cultural affairs office (ctcao). this activity aims to provide free workshops and training on the aspects of digital creation and marketing strategies, and was participated by various digital creatives, artists, enterprises, and institutions in koronadal city.
+Organized by the City Tourism and Cultural Affairs Office, the free workshop brought together digital creatives, artists, local enterprises, and institutions with sessions focused on digital content creation and marketing strategies.
 
-It was indeed a purposeful and fun-filled activity that gave the participants useful insights that they can surely use to heighten their digital creation and marketing strategy formulation and implementation.
+Over the course of the three-day event, participants engaged in hands-on activities aimed at enhancing their skills in crafting compelling digital content and strengthening online marketing techniques. The workshop was described as both “purposeful and fun-filled,” offering practical insights meant to elevate participants’ creative and promotional capabilities.
+
+The CK‑CIDP workshop is part of a broader push under DTI’s Lunsod Lunsad program, which supports local creative industries by providing funding, technical assistance, and capacity-building workshops across municipalities—including Koronadal, a recognized recipient of a P2‑million grant for creative industry development.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/468949798_897469115828307_504456807025108032_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/468410816_897469232494962_4975366495957542957_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469076521_897469135828305_2979383281344622811_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469211223_897469469161605_179134978671932704_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469430235_897467792495106_5763843252782268922_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/469538574_897467622495123_3344214936967525432_n.jpg)
