--- a/news/2025/01/28/003.mdx
+++ b/news/2025/01/28/003.mdx
@@ -1,15 +1,25 @@
 ---
-slug: "frame-the-future-capturing-moments-crafting-digital-presence"
-title: "frame the future: capturing moments, crafting digital presence"
-description: "The students of the college of business and management (cbm) department actively participated in a..."
+slug: "goldenstate-cbm-students-join-frame-the-future-photography-marketing-workshop"
+title: "Goldenstate CBM Students Join ‘Frame the Future’ Photography, Marketing Workshop"
+description: "Goldenstate CBM students joined a workshop to boost photography and digital marketing skills on campus..."
 author: "Goldenstate"
 date: "2025/01/28"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/468215362_888933856681833_6961660297182403844_n.jpg"
 ---
 
-The students of the college of business and management (cbm) department actively participated in a 1-day seminar and workshop on photography that was led by sir gerald gulmatico ruplo, mit, where he discussed basic information and things to consider and remember about the world of photography and digital marketing.
+Goldenstate College's College of Business and Management (CBM) students took part in a one-day seminar and workshop titled “Frame the Future: Capturing Moments, Crafting Digital Presence”, led by Sir Gerald Gulmatico Ruplo, MIT. Hosted on campus, the event aimed to enhance both the photography skills and digital marketing know-how of the participants.
 
-This activity was subdivided into two parts, wherein the first part was intended for the seminar and discussion, and the second part was intended for the workshop where the students captured and submitted their own photo entries.
+The program was divided into two parts: a morning session focused on photography fundamentals—composition, lighting, framing—and digital marketing essentials for effective visual storytelling online. In the afternoon, students engaged in a hands-on workshop, capturing and submitting their own photo entries for evaluation.
 
-This seminar and workshop was organized by the cbm departmental officers and was participated by all year levels of the bs tourism management and bs business administration – mm programs.
+The activity–organized by CBM departmental officers–was attended by students across all year levels of the BS Tourism Management and BS Business Administration – Major in Marketing Management programs. Participants expressed appreciation for the balance of theory and practical application, describing the workshop as “insightful” and “relevant.”
 
-Indeed, it was an informative and relevant activity that surely gave the students some useful insights that they can apply to level up their whole photography experiences and make their digital marketing skills more effective.
+As visual content continues to drive online engagement and brand visibility, events like this equip students with skills that are increasingly in demand. With refined photography techniques and marketing strategies, they are better prepared to represent businesses and promotions in a competitive digital environment.
+
+Goldenstate College underscores its commitment to developing professionals who are not only academically competent but also digitally savvy—capable of navigating both business and social media landscapes with confidence.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/468215362_888933856681833_6961660297182403844_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467252290_888933660015186_3592486522481804547_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467502388_888933933348492_8868796520317235477_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467610781_888934016681817_3385850424638347598_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467692755_888933530015199_8727930359270982359_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467853219_888933620015190_53027366854661862_n.jpg)
