--- a/news/2025/01/28/001.mdx
+++ b/news/2025/01/28/001.mdx
@@ -1,25 +1,27 @@
 ---
-slug: "cbm-tindahan-2024-a-resounding-success"
-title: "cbm tindahan 2024: a resounding success!"
-description: "The bsba marketing management students proudly showcased their entrepreneurial skills during the cbm tindahan 2024,..."
+slug: "cbm-tindahan-2024-tops-off-gsck-intramurals-with-entrepreneurial-flair"
+title: "CBM Tindahan 2024 Tops Off GSCK Intramurals with Entrepreneurial Flair"
+description: "Goldenstate Marketing students led CBM Tindahan 2024, showcasing trading skills during GSCK Intramurals business bazaar..."
 author: "Goldenstate"
 date: "2025/01/28"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467414577_886299730278579_6923792755572420301_n.jpg"
 ---
 
-The bsba marketing management students proudly showcased their entrepreneurial skills during the cbm tindahan 2024, held from november 5-8, 2024, as part of the gsck intramurals 2024 at the south cotabato sports complex.
+Goldenstate College of General Santos City’s College of Business and Marketing Management students seized the spotlight at the all‑out CBM Tindahan 2024, a business bazaar held during the GSCK Intramurals at the South Cotabato Sports Complex. The four‑day event featured hands‑on trading skills, as each BSBA batch vied for top sales performance.
 
-This exciting bazaar was a testament to creativity, collaboration, and business acumen, with each batch competing to achieve the highest sales. after an incredible effort from all teams, here are the results:.
+Results were announced after an intense round of competition:
 
-Congratulations to the winners!.
+* **Champion** – BSBA 3 (Afternoon session)
+* **1st Runner‑Up** – BSBA 3 (Morning session)
+* **2nd Runner‑Up** – BSBA 1
+* **3rd Runner‑Up** – BSBA 2
+* **4th Runner‑Up** – BSBA 4
 
-Champion – bsba 3 (afternoon session).
+Organizers hailed the event as a showcase of creativity, collaboration, and business acumen, with strong turnout and enthusiastic community support.
 
-1st runner-up – bsba 3 (morning session).
-
-2nd runner-up – bsba 1.
-
-3rd runner-up – bsba 2.
-
-4th runner-up – bsba 4.
-
-A huge thank you to everyone who supported the event! your participation and enthusiasm made this year’s cbm tindahan truly memorable. until next time, let’s keep the entrepreneurial spirit alive!.
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/freepik__fun-whimsical-elements-with-bright-colors-and-a-se__34160.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467434851_886299863611899_5444632148670608830_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467414577_886299730278579_6923792755572420301_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467399072_886299820278570_5159648102552768329_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467245775_886299716945247_2475083493670764977_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2025/01/467151744_886299876945231_8963710569569812331_n.jpg)
